core/static/bootstrap/css/bootstrap.css
/*!
 * Bootstrap v3.3.6 (http://getbootstrap.com)
 * Copyright 2011-2015 Twitter, Inc.
 * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
 */
/*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
html {
  font-family: 'Open Sans', sans-serif !Important;
  -webkit-text-size-adjust: 100%;
      -ms-text-size-adjust: 100%;
}
body {
  margin: 0;
}
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
menu,
nav,
section,
summary {
  display: block;
}
aside{
	background-image:url("../images/black_thread.png");
}
aside p{
	font-size: 18px;
	padding-top: 1%;
}
aside h1{
    font-weight:500;
	padding-top:5%;
	font-size: 36px;
}
aside h2{
	color:#E0D7C5;
	font-size: 28px;
}
audio,
canvas,
progress,
video {
  display: inline-block;
  vertical-align: baseline;
}
audio:not([controls]) {
  display: none;
  height: 0;
}
[hidden],
template {
  display: none;
}
footer {
  background-color:black;
    position: fixed;
  padding-top:.25%;
  padding-bottom:.25%;
    width: 100%;
    color: white;
    text-align: center;
    bottom: 0px;
}
#img_text {
	text-align:center;
	font-size:13px !important;
	margin-top:1%;
}
#about_text {
	margin-top:1%;
	text-align:left;
}
#t_score_field {
	font-size:18px;
	float:left;
}

#logo {
	display: inline-block;
	vertical-align:middle;
	line-height:164px;
	height:auto;
}
#lig_img {
	display:block;
	margin-left:auto;
	margin-right:auto;
	border:3px !important;
	border-style:groove !important;
	
}
#summary {
  padding-left:1%;
  text-align:left !important;
}

#hero_container{
  background-image:url("../images/black_thread.png");
}
#sequence{
  width: 600px;
  margin-right:auto;
  margin-left:auto;
  padding-top:2%;
  padding-bottom:2%;
  margin-top:4%;
  border-style:double;
  padding-right:44%;
  padding-left:1%;
  background-image:url("../images/squared-metal.png");
}

#interactions{


}

#results_page{
  padding-top:1%;
  width: 90%;

}
#results_page_int_lig{
  margin-top: 4%;
  padding-right:0;
  width: 100%;
}
#results_page_int{
  margin-top: 4%;
  width: 90%;
}
a {
  background-color: transparent;
}
a:active,
a:hover {
  outline: 0;
}
abbr[title] {
  border-bottom: 1px dotted;
}
b,
strong {
  font-weight: bold;
}
dfn {
  font-style: italic;
}
h1 {
  margin: .67em 0;
  font-size: 2em;
}
#results_h1{
	font-size:30px;
}
mark {
  color: #000;
  background: #ff0;
}
small {
  font-size: 80%;
}
sub,
sup {
  position: relative;
  font-size: 75%;
  line-height: 0;
  vertical-align: baseline;
}
sup {
  top: -.5em;
}
sub {
  bottom: -.25em;
}
img {
  border: 0;
}
svg:not(:root) {
  overflow: hidden;
}
figure {
  margin: 1em 40px;
}
hr {
  height: 0;
  -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
          box-sizing: content-box;
}
#sources_hr{
  margin-bottom:0;
  margin-top:0;
}
pre {
  overflow: auto;
}
code,
kbd,
pre,
samp {
  font-family: monospace, monospace;
  font-size: 1em;
}
button,
input,
optgroup,
select,
textarea {
  margin: 0;
  font: inherit;
  color: inherit;
}
button {
  overflow: visible;
}
button,
select {
  text-transform: none;
}
button,
html input[type="button"],
input[type="reset"],
input[type="submit"] {
  -webkit-appearance: button;
  cursor: pointer;
}
button[disabled],
html input[disabled] {
  cursor: default;
}
button::-moz-focus-inner,
input::-moz-focus-inner {
  padding: 0;
  border: 0;
}
input {
  line-height: normal;
}
input[type="checkbox"],
input[type="radio"] {
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
  padding: 0;
}
input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  height: auto;
}
input[type="search"] {
  -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
          box-sizing: content-box;
  -webkit-appearance: textfield;
}
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}
fieldset {
  padding: .35em .625em .75em;
  margin: 0 2px;
  border: 1px solid #c0c0c0;
}
legend {
  padding: 0;
  border: 0;
}
textarea {
  overflow: auto;
  resize: none;

}
optgroup {
  font-weight: bold;
}
table {
  border-spacing: 0;
  border-collapse: collapse;
}
#interaction_table {
  margin-left:auto;
  margin-right:auto;
  width:100%;
  margin-top:5%;
  margin-bottom:1%;
}
#source_tbody {
  height:300px;
  overflow-y: scroll;
  display: inline-block;
}
#source_tr{
 
}
td,
th {
  padding-top: .5%;
  padding-bottom: .5%;
}
@media print {
  *,
  *:before,
  *:after {
    color: #000 !important;
    text-shadow: none !important;
    background: transparent !important;
    -webkit-box-shadow: none !important;
            box-shadow: none !important;
  }
  a,
  a:visited {
    text-decoration: underline;
  }
  a[href]:after {
    content: " (" attr(href) ")";
  }
  abbr[title]:after {
    content: " (" attr(title) ")";
  }
  a[href^="#"]:after,
  a[href^="javascript:"]:after {
    content: "";
  }
  pre,
  blockquote {
    border: 1px solid #999;

    page-break-inside: avoid;
  }
  thead {
    display: table-header-group;
  }
  tr,
  img {
    page-break-inside: avoid;
  }
  img {
    max-width: 100% !important;
  }
  
  h1,h2,h3{
	  font-family: 'Roboto Slab', serif !important;
  }
  p,
  h2,
  h3 {
    orphans: 3;
    widows: 3;
  }
  h2,
  h3 {
    page-break-after: avoid;
  }
  .navbar {
    display: none;
  }
  .btn > .caret,
  .dropup > .btn > .caret {
    border-top-color: #000 !important;
  }
  .label {
    border: 1px solid #000;
  }
  .table {
    border-collapse: collapse !important;
  }
  .table td,
  .table th {
    background-color: #fff !important;
  }
  .table-bordered th,
  .table-bordered td {
    border: 1px solid #ddd !important;
  }
}
.table_row {
	display:table;
	table-layout:fixed;
}
.vcenter {
	float:none !important;
	display: table-cell;
	vertical-align:middle;
	text-align:left !important;
}
#navbar-box{
	width:100% !important;
}
/* ... */

